[project]
name = "anyrow"
version = "1.0.0"
description = "AI-native operations platform — extract, store, review, sync. Turn any document, photo, call, email, or website into a row in your table."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Anyrow", email = "oss@anyrow.ai" }]
maintainers = [{ name = "Anyrow", email = "oss@anyrow.ai" }]
keywords = [
    "anyrow",
    "operations-platform",
    "ai-extraction",
    "document-extraction",
    "structured-data",
    "relational-database",
    "ai-database",
    "data-sync",
    "airtable-alternative",
    "parseur-alternative",
    "ai-ops",
    "reny",
    "python",
    "pydantic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://anyrow.ai"
Repository = "https://github.com/anyrow/sdk-python"
Issues = "https://github.com/anyrow/sdk-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anyrow"]
